tests/should-fail/shouldnt-crash-2.j
function a takes nothineger
	if true then
		return 0
	elseif false then
	else
local a a = aendif
endfunction
